valobj/tests/ui/attributes/missing_validate_test.stderr
error[E0277]: the trait bound `UserId: Validate<u64>` is not satisfied
 --> tests/ui/attributes/missing_validate_test.rs:1:1
  |
1 | #[valobj::value_object(Validate)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Validate<u64>` is not implemented for `UserId`
 --> tests/ui/attributes/missing_validate_test.rs:1:1
  |
1 | #[valobj::value_object(Validate)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: see issue #48214
  = note: this error originates in the attribute macro `valobj::value_object` (in Nightly builds, run with -Z macro-backtrace for more info)
