valobj/tests/ui/attributes/missing_validate_test.rs
#[valobj::value_object(Validate)]
pub struct UserId(u64);

fn main() {}
